[package]
name = "philiprehberger-email-parser"
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "RFC 5322 compliant email address parsing, validation, and normalization"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-email-parser"
documentation = "https://docs.rs/philiprehberger-email-parser"
keywords = ["email", "validation", "parser", "rfc5322", "address"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
